# silbercuechrome

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  prompt.md  tsconfig.json
.claude/: settings.json
_bmad-output/implementation-artifacts/: 10-1-fix-license-commands-test.md  10-2-autolaunch-tests-doku.md  10-3-smoke-test-env-fix.md  10-4-benchmark-runner-finalisieren.md  11-5-npm-package-migration.md  11-6-python-package-migration.md  11-7-v2-0-0-release.md  12-1-meta-response-bytes.md  12-4-tool-definitions-token-zaehler.md  13-2-visual-feedback-nach-edits.md  13a-1-ambient-page-context.md  16-7-verification-results.md  19-10-seed-library-validation-und-benchmark-integration.md  19-7-top-level-tools-operator-und-virtual-desk.md  9-3-chrome-page-api.md  handoff-2026-04-08-post-benchmark.md  sprint-status.yaml  story-13-1-inspect-element.md
_bmad-output/planning-artifacts/: architecture.md  (+5 more)
cards/: article-reader.yaml  login-form.yaml  search-result-list.yaml
docs/: deferred-work.md  friction-fixes.md  friction-report-2026-04-06.md
python/: README.md  pyproject.toml
python/publicbrowser/: __init__.py  cdp.py  chrome.py  client.py  escape_hatch.py  page.py
python/silbercuechrome/: __init__.py  cdp.py  chrome.py  client.py  escape_hatch.py  page.py
python/tests/: conftest.py  test_cdp.py  test_chrome.py  test_chrome_v2.py  test_client.py  test_coexistence.py  test_distribution.py  test_e2e_coexistence.py  test_escape_hatch.py  test_page.py  test_page_v2.py  test_response_parsing.py  test_shared_core.py
scripts/: aggregate-telemetry.ts  check-gate.test.ts  check-gate.ts  dev-mode.sh  publish.test.ts  publish.ts  token-count.mjs  validate-card.test.ts  validate-card.ts  visual-feedback.mjs  visual-feedback.test.ts
src/: fallback-registry.test.ts  fallback-registry.ts  index.ts  pro-feature-gates.regression.test.ts  registry.test.ts  registry.ts  server.test.ts  server.ts  types.ts  version.ts
test-hardest/: BENCHMARK-PROTOCOL.md  benchmark-full.mjs  benchmark-silbercuechrome-2026-04-06.json  benchmark-silbercuechrome_mcp-1775416669490.json  benchmark-silbercuechrome_mcp-1775416696673.json  benchmark-silbercuechrome_mcp-1775416756099.json  benchmark-silbercuechrome_mcp-llm-2026-04-05.json  benchmark-silbercuechrome_mcp-llm-2026-04-06-post-friction.json  benchmark-silbercuechrome_mcp-llm-2026-04-06.json  epic5b-test.mjs  full-benchmark.mjs  index.html  run-mcp-benchmark.mjs  smoke-test-pro.mjs  smoke-test.mjs  tab-target.html  test-ambient-context.md
test-stress/: 14-edge-cases.html  stress-results-1775274624616.json  stress-test-v2.mjs  stress-test-v3-edges.mjs  stress-test-v4-torture.mjs  stress-v2-results-1775274880178.json  stress-v3-results-1775275044772.json  stress-v4-results-1775275205882.json
(+189 files in other folders)
