[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silbercuechrome"
version = "1.0.0"
description = "Minimal CDP client for Chrome browser automation"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Julian Friedrich" },
]
dependencies = [
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
